<resources>
    <string name="app_name">BlogBlogBlog</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_second_page">SecondPage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="insert_email">Insert Email</string>
    <string name="insert_password">Insert Password</string>
    <string name="login_key_image">Login Key Image</string>
    <string name="addblog">AddBlog</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_here">Username here</string>
    <string name="change_username">Change Username</string>
    <string name="pick_a_cool_title">Pick A Cool title</string>
    <string name="write_some_content">Write Some Content</string>
    <string name="add_image">Add Image</string>
    <string name="postblogbtn">PostBlogBtn</string>
    <string name="uploadimg">UploadImg</string>
    <string name="username">Username</string>
    <string name="post_date">Post Date</string>
    <string name="title">Title</string>
</resources>
