<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/second_page_background"
    tools:context=".add_blog">


    <ImageView
        android:id="@+id/addpost_img"
        android:layout_width="195dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add_blog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addpost_content"
        android:contentDescription="@string/uploadimg" />

    <EditText
        android:id="@+id/addpost_title"
        android:layout_width="219dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:background="@color/insert_background"
        android:hint="@string/pick_a_cool_title"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.302"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:inputType="text"
        android:id="@+id/addpost_content"
        android:layout_width="308dp"
        android:layout_height="155dp"
        android:layout_marginTop="20dp"
        android:background="@color/insert_background"
        android:gravity="top"
        android:hint="@string/write_some_content"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addpost_title"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/plain_text"
        android:layout_width="93dp"
        android:layout_height="30dp"
        android:autofillHints="no"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/plain_text"
        android:background="@color/fui_transparent"
        android:clickable="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/add_image"
        android:textColor="@color/insert_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addpost_content" />

    <ImageView
        android:id="@+id/addpost_post"
        android:layout_width="48dp"
        android:layout_height="51dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toTopOf="@+id/addpost_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toEndOf="@+id/addpost_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857"
        android:contentDescription="@string/postblogbtn" />

    <ProgressBar
        android:id="@+id/addpost_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="159dp"
        android:layout_height="118dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/plain_text"
        app:layout_constraintEnd_toEndOf="@+id/addpost_content"
        app:layout_constraintStart_toStartOf="@+id/addpost_content"
        app:layout_constraintTop_toBottomOf="@+id/addpost_title" />
</androidx.constraintlayout.widget.ConstraintLayout>