<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/insert_background">


    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:clickable="false"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/post_preview_profile_img"
                android:layout_width="51dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_cloud_download_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/post_preview_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.136" />

            <TextView
                android:id="@+id/post_preview_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/fui_transparent"
                android:clickable="false"
                android:text="@string/post_date"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.902"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_preview_title"
                app:layout_constraintVertical_bias="0.448" />

            <TextView
                android:id="@+id/post_preview_title"
                android:layout_width="216dp"
                android:layout_height="65dp"
                android:background="@color/cardview_dark_background"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="@color/text_insert_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.505" />

            <TextView
                android:id="@+id/post_preview_username"
                android:layout_width="137dp"
                android:layout_height="19dp"
                android:background="@color/insert_background"
                android:clickable="false"
                android:text="@string/username"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/post_preview_title"
                app:layout_constraintEnd_toEndOf="@+id/post_preview_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/post_preview_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>